Fixed bug with spacing on verse numbers after quotes not showing

--- a/nextjs-frontend/components/Editor/Editor.module.css
+++ b/nextjs-frontend/components/Editor/Editor.module.css
@@ -55,7 +55,7 @@
   flex: 1;
   padding: 10px;
   margin: 10px;
-  user-select: none;
+  /* user-select: none; */
 }
 
 .justify {
